--- a/Tankz/Base.lproj/Main.storyboard
+++ b/Tankz/Base.lproj/Main.storyboard
@@ -275,6 +275,9 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Ready" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A88-wj-9ac">
                                 <rect key="frame" x="0.0" y="384" width="317.66666666666669" height="30"/>
                                 <color key="backgroundColor" name="militaryRed"/>
+                                <accessibility key="accessibilityConfiguration" identifier="P1ReadyStatus">
+                                    <accessibilityTraits key="traits" button="YES" staticText="YES"/>
+                                </accessibility>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="pYy-qe-497"/>
                                 </constraints>
@@ -285,6 +288,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Ready" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEj-aH-NsF">
                                 <rect key="frame" x="418" y="384" width="318" height="30"/>
                                 <color key="backgroundColor" name="militaryRed"/>
+                                <accessibility key="accessibilityConfiguration" identifier="P2ReadyStatus"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="UjB-gB-w08"/>
                                 </constraints>
@@ -328,6 +332,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O8j-hf-CWi">
                                 <rect key="frame" x="318" y="354" width="100" height="30"/>
+                                <accessibility key="accessibilityConfiguration" identifier="ReadyButton"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="9Fd-0c-bMH"/>
                                     <constraint firstAttribute="height" constant="30" id="HFc-BL-Y4L"/>
@@ -587,9 +592,6 @@
         </namedColor>
         <namedColor name="militaryGreenLight">
             <color red="0.30199998617172241" green="0.47099998593330383" blue="0.3059999942779541" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="militaryRed">
-            <color red="0.85100001096725464" green="0.0" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="militaryRed">
             <color red="0.85100001096725464" green="0.0" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
