--- a/Tankz/Base.lproj/Main.storyboard
+++ b/Tankz/Base.lproj/Main.storyboard
@@ -273,7 +273,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Ready" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A88-wj-9ac">
-                                <rect key="frame" x="0.0" y="384" width="317.66666666666669" height="30"/>
+                                <rect key="frame" x="0.0" y="384" width="318" height="30"/>
                                 <color key="backgroundColor" name="militaryRed"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="pYy-qe-497"/>
@@ -283,7 +283,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CRB-b6-v4W">
-                                <rect key="frame" x="44" y="324" width="724" height="30"/>
+                                <rect key="frame" x="318" y="384" width="100" height="30"/>
                                 <color key="backgroundColor" red="0.30588235289999999" green="0.38823529410000002" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="IdA-lZ-gKS"/>
@@ -306,7 +306,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ams-4P-z4U">
-                                <rect key="frame" x="0.0" y="354" width="317.66666666666669" height="30"/>
+                                <rect key="frame" x="0.0" y="354" width="318" height="30"/>
                                 <color key="backgroundColor" name="militaryGreenLight"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="EpX-2i-Xjg"/>
@@ -316,7 +316,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVE-H5-h1S">
-                                <rect key="frame" x="418" y="354" width="318" height="30"/>
+                                <rect key="frame" x="418.33333333333326" y="354" width="318" height="30"/>
                                 <color key="backgroundColor" name="militaryGreenLight"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="d5P-iJ-2b9"/>
@@ -340,7 +340,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O8j-hf-CWi">
-                                <rect key="frame" x="318" y="354" width="100" height="30"/>
+                                <rect key="frame" x="318.33333333333331" y="354" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="9Fd-0c-bMH"/>
                                     <constraint firstAttribute="height" constant="30" id="HFc-BL-Y4L"/>
@@ -351,16 +351,6 @@
                                 <connections>
                                     <action selector="isReady:" destination="usC-V1-22A" eventType="touchUpInside" id="h9Y-aa-b2G"/>
                                 </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CRB-b6-v4W">
-                                <rect key="frame" x="318" y="384" width="100" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="CYi-e2-xnK"/>
-                                    <constraint firstAttribute="width" constant="100" id="c3R-wE-6Jp"/>
-                                </constraints>
-                                <state key="normal" title="Change map" backgroundImage="btn_2">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J01-cN-Heb">
                                 <rect key="frame" x="368.33333333333326" y="44" width="367.66666666666674" height="310"/>
@@ -587,7 +577,6 @@
         <image name="ag_title" width="1003" height="160"/>
         <image name="angleIcon" width="48" height="48"/>
         <image name="btn_1" width="359" height="122"/>
-        <image name="btn_2" width="359" height="122"/>
         <image name="cg_btn" width="617" height="183"/>
         <image name="fire_btn" width="256" height="256"/>
         <image name="jg_btn" width="617" height="183"/>
@@ -600,9 +589,6 @@
         </namedColor>
         <namedColor name="militaryGreenLight">
             <color red="0.30199998617172241" green="0.47099998593330383" blue="0.3059999942779541" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="militaryRed">
-            <color red="0.85100001096725464" green="0.0" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="militaryRed">
             <color red="0.85100001096725464" green="0.0" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
