--- a/Tankz/Base.lproj/Main.storyboard
+++ b/Tankz/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Yr-Fg-rlS" userLabel="How To">
-                                <rect key="frame" x="681" y="359" width="40" height="40"/>
+                                <rect key="frame" x="757" y="320" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="YiL-na-udS"/>
                                     <constraint firstAttribute="height" constant="40" id="riu-Nt-qO8"/>
@@ -313,21 +313,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CRB-b6-v4W">
-                                <rect key="frame" x="318" y="384" width="100" height="30"/>
-                                <color key="backgroundColor" red="0.30588235289999999" green="0.38823529410000002" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="IdA-lZ-gKS"/>
-                                </constraints>
-                                <state key="normal" title="Change map">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="ChangeMap:" destination="usC-V1-22A" eventType="touchUpInside" id="9nT-4L-Upw"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Ready" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEj-aH-NsF">
-                                <rect key="frame" x="456" y="324" width="356" height="51"/>
+                                <rect key="frame" x="456" y="324" width="356.33333333333326" height="51"/>
                                 <color key="backgroundColor" name="militaryRed"/>
                                 <accessibility key="accessibilityConfiguration" identifier="P2ReadyStatus"/>
                                 <constraints>
@@ -348,7 +335,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waiting for player" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVE-H5-h1S">
-                                <rect key="frame" x="456" y="294" width="356" height="30"/>
+                                <rect key="frame" x="455.66666666666674" y="294" width="356.33333333333326" height="30"/>
                                 <color key="backgroundColor" name="militaryGreenLight"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="d5P-iJ-2b9"/>
@@ -372,7 +359,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O8j-hf-CWi">
-                                <rect key="frame" x="318" y="354" width="100" height="30"/>
+                                <rect key="frame" x="355.66666666666669" y="294" width="100" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="ReadyButton"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="9Fd-0c-bMH"/>
@@ -459,78 +446,6 @@
             </objects>
             <point key="canvasLocation" x="891.84782608695662" y="1101.449275362319"/>
         </scene>
-        <!--Scoreboard View Controller-->
-        <scene sceneID="FJO-z2-Dpi">
-            <objects>
-                <viewController id="7RH-Jh-Bit" customClass="ScoreboardViewController" customModule="Tankz" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="at0-yW-lYk">
-                        <rect key="frame" x="0.0" y="0.0" width="812" height="375"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="psD-aX-L5K">
-                                <rect key="frame" x="64" y="20" width="684" height="314"/>
-                                <color key="backgroundColor" name="groundBrown"/>
-                                <label key="tableHeaderView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scoreboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hlH-6I-iVv">
-                                    <rect key="frame" x="0.0" y="0.0" width="684" height="36"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                    <color key="textColor" red="0.5568627451" green="0.96470588239999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="playerScoreCell" id="ZG9-Lr-393" customClass="ScoreTableViewCell" customModule="Tankz" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="64" width="684" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZG9-Lr-393" id="M2T-fZ-vFr">
-                                            <rect key="frame" x="0.0" y="0.0" width="684" height="43.666666666666664"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAb-hx-Q1O">
-                                                    <rect key="frame" x="241" y="11.666666666666664" width="45" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OpponentName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Pg-XN-GrR">
-                                                    <rect key="frame" x="5" y="11" width="122" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="oAb-hx-Q1O" secondAttribute="trailing" constant="5" id="6sS-TK-uPK"/>
-                                                <constraint firstItem="5Pg-XN-GrR" firstAttribute="centerY" secondItem="M2T-fZ-vFr" secondAttribute="centerY" id="Snt-lx-ekc"/>
-                                                <constraint firstItem="5Pg-XN-GrR" firstAttribute="leading" secondItem="M2T-fZ-vFr" secondAttribute="leading" constant="5" id="dQX-v6-c3b"/>
-                                                <constraint firstItem="oAb-hx-Q1O" firstAttribute="centerY" secondItem="M2T-fZ-vFr" secondAttribute="centerY" id="oFc-fd-QuK"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.30196078430000001" green="0.47058823529999999" blue="0.30588235289999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <connections>
-                                            <outlet property="opponentNameLabel" destination="5Pg-XN-GrR" id="ywc-fO-fCd"/>
-                                            <outlet property="scoreLabel" destination="oAb-hx-Q1O" id="tZp-SK-fxF"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.4039215686" green="0.33725490200000002" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="psD-aX-L5K" firstAttribute="top" secondItem="zhU-29-u7C" secondAttribute="top" constant="20" id="L7b-m2-eiZ"/>
-                            <constraint firstItem="psD-aX-L5K" firstAttribute="leading" secondItem="zhU-29-u7C" secondAttribute="leading" constant="20" id="XCI-TR-AgD"/>
-                            <constraint firstItem="zhU-29-u7C" firstAttribute="trailing" secondItem="psD-aX-L5K" secondAttribute="trailing" constant="20" id="XHy-oJ-4Xb"/>
-                            <constraint firstItem="zhU-29-u7C" firstAttribute="bottom" secondItem="psD-aX-L5K" secondAttribute="bottom" constant="20" id="zgR-ah-HMj"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="zhU-29-u7C"/>
-                    </view>
-                    <connections>
-                        <outlet property="scoreboardTable" destination="psD-aX-L5K" id="BTV-Pq-QHg"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="j96-nC-zZT" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="470" y="-575"/>
-        </scene>
         <!--Join Game View Controller-->
         <scene sceneID="wUl-wB-dbf">
             <objects>
@@ -544,7 +459,7 @@
                                 <color key="backgroundColor" name="mountainGray"/>
                                 <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellReuseIdentifier" rowHeight="75" id="AFX-E0-pc8" customClass="GameTableViewCell" customModule="Tankz" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellReuseIdentifier" rowHeight="75" id="AFX-E0-pc8" customClass="GameTableViewCell" customModule="Tankz" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="713" height="75"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AFX-E0-pc8" id="GVD-RK-uSI">
@@ -552,7 +467,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HostName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RK6-Xy-Ll6">
-                                                    <rect key="frame" x="15" y="16" width="694" height="43"/>
+                                                    <rect key="frame" x="15" y="16" width="639" height="43"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -632,9 +547,6 @@
         <image name="logo" width="605" height="189"/>
         <image name="powerIcon" width="48" height="48"/>
         <image name="rightArrow" width="48" height="48"/>
-        <namedColor name="groundBrown">
-            <color red="0.40400001406669617" green="0.33700001239776611" blue="0.29800000786781311" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="militaryGreenLight">
             <color red="0.30199998617172241" green="0.47099998593330383" blue="0.3059999942779541" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
