--- a/Tankz/Base.lproj/Main.storyboard
+++ b/Tankz/Base.lproj/Main.storyboard
@@ -337,16 +337,6 @@
                             <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" currentPage="1" translatesAutoresizingMaskIntoConstraints="NO" id="wge-d1-hGQ">
                                 <rect key="frame" x="184" y="257" width="39" height="37"/>
                             </pageControl>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uB1-aD-1dO">
-                                <rect key="frame" x="307" y="44" width="123" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Go to gameScene">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <segue destination="gDR-NA-MQg" kind="show" identifier="startGameSegue" id="pys-mf-noy"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O8j-hf-CWi">
                                 <rect key="frame" x="355.66666666666669" y="294" width="100" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="ReadyButton"/>
@@ -429,6 +419,7 @@
                         <outlet property="readyStatusLabelP2" destination="rEj-aH-NsF" id="Ks7-Vf-atZ"/>
                         <outlet property="scrollViewP1" destination="NHb-HI-PuY" id="CGN-O1-lLZ"/>
                         <outlet property="scrollViewP2" destination="J01-cN-Heb" id="Df9-my-UcG"/>
+                        <segue destination="gDR-NA-MQg" kind="show" identifier="startGameSegue" id="5jI-BT-F6F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u5u-aG-k7G" userLabel="First Responder" sceneMemberID="firstResponder"/>
